<resources>
    <string name="app_name">UFeed</string>
    <string name="title_hint">Title</string>
    <string name="notes_hint">Input Notes</string>
    <string name="read">To Read</string>
    <string name="done">Done</string>
    <string name="re_read">Re-Read</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_book_two">BookActivityTwo</string>
    <string name="title_activity_add_book">AddBookActivity</string>
    <string name="add">Add</string>
    <string name="add_tv">Add a Book</string>
    <string name="cardText">To Read</string>
    <string name="no_notes">No Saved Notes</string>
    <string name="prompt">What were 10 things you were grateful for today?</string>
    <string name="grateful">I\'m grateful for</string>
    <string name="book_contentDescription">bookshelf filled with books</string>
</resources>
