<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="nyc.c4q.leighdouglas.ufeed.BookRecyclerContentActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/this_book_title"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAllCaps="true"
            android:textColor="@color/instaColor"
            android:background="@color/paleOrange"
            android:textStyle="italic"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/this_book_author"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/saved_notes"
            android:hint="@string/no_notes"
            android:textColorHint="@color/lightBlue"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingBottom="5dp"
            android:paddingTop="20dp"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/enter_notes"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/notes_hint"
            android:textColorHint="@color/lightBlue"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/to_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/read"
                android:background="@drawable/corners"/>

            <Button
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/done"
                android:background="@drawable/corners"/>

            <Button
                android:id="@+id/re_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/re_read"
                android:background="@drawable/corners"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous"
                android:background="@drawable/corners"/>

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:background="@drawable/corners"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/fab_margin"
                app:srcCompat="@android:drawable/ic_menu_save" />
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
